# crossing-writer

./: .gitignore  README.md  config.json  package.json  pnpm-lock.yaml
docs/superpowers/notes/: 2026-04-12-import-stats.txt  2026-04-12-sp01-acceptance.md  2026-04-13-sp02-acceptance.md  backlog-raw-sources.md  sp02-vault-experts-setup.md
docs/superpowers/plans/: 2026-04-12-vault-and-importer.md  2026-04-13-sp02-mission-workbench.md  2026-04-13-sp03-5-ux-polish.md  2026-04-13-sp03-case-plan-workbench.md  2026-04-13-sp04-evidence-upload.md  2026-04-14-sp05-writer.md  2026-04-14-sp06-style-distiller.md  2026-04-14-sp07-wiki-ingestor.md  2026-04-14-sp08-writer-tool-use.md  2026-04-14-sp09-selection-rewrite-mention.md  2026-04-14-sp10-config-workbench.md  2026-04-14-sp11-cli-health.md  2026-04-14-sp12-topic-expert-team.md  2026-04-14-sp13-manual-edit-images.md  2026-04-14-sp14-visual-redesign.md  2026-04-14-sp15-distill-acceleration.md  2026-04-15-v1.6-ui-library.md  2026-04-16-brief-analyst-vision.md  2026-04-16-expert-peer-review-and-refine.md  (+14 more)
samples/briefs/: metanovas-sample.md
scripts/: evaluate-panel.ts
tools/bulk_import/: pyproject.toml
tools/bulk_import/scripts/: smoke.sh
tools/bulk_import/src/bulk_import/: __main__.py  claude_cli.py  config.py  db.py  extractor.py  importer.py  matcher.py  sanitize.py  segmenter.py  tag.py
tools/bulk_import/tests/: conftest.py  test_config.py  test_db.py  test_extractor.py  test_importer.py  test_matcher.py  test_sanitize.py  test_segmenter.py  test_tag.py
tools/bulk_import/tests/fixtures/: sample.html
(+32 files in other folders)
