[project]
name = "bulk_import"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "openpyxl>=3.1",
  "beautifulsoup4>=4.12",
  "markdownify>=0.11",
  "jieba>=0.42",
  "tqdm>=4.66",
  "rich>=13.7",
  "lxml>=5.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
